services/canary-app/ingress/ingress.yaml
# nginx ingress controller
# apiVersion: extensions/v1beta1
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: canary-app
  annotations:
    ingress.kubernetes.io/proxy-body-size: 100M
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/app-root: "/"
spec:
  rules:
  - host: canary-app.apps.argoproj.io
    http:
      paths:
      - path: /
        backend:
          serviceName: canary-app
          servicePort: 80
